--- a/styles.css
+++ b/styles.css
@@ -528,7 +528,7 @@ color: var(--titulo);
   font-family: "Lato", sans-serif;
   letter-spacing: 1px;
 
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   width: 400px;
   height: 40px;
   background: oklch(98.5% 0 0);
@@ -877,10 +877,11 @@ label{
 .inputFormulario {
   background: var(--colorFondoDM);
   border: none;
-  border-bottom: 3px solid var(--colorBordeDM);
+  border-bottom: 2px solid var(--colorBordeDM);
+  
 }
 .inputFormulario::placeholder {
-  color: var(--tituloDM);
+  color: #cdcdcd;
   
 }
 .inputFormulario:focus {
