--- a/styles.css
+++ b/styles.css
@@ -576,7 +576,7 @@ color: var(--textoSecundario);
   outline: none;
   border: none;
   border-radius: 0;
-  border-bottom: 3px solid rgb(178, 178, 178);
+  border-bottom: 2px solid var(--textoSecundario);
   transition: border-bottom 100ms ease 0ms, border-radius 100ms ease 0ms;
 }
 .btnFormulario {
@@ -920,7 +920,7 @@ li{
   
 }
 .inputFormulario:focus {
-  border-bottom: 3px solid var(--colorBordeDM);
+  border-bottom: 2px solid var(--textoSecundarioDM);
   
 }
 
