--- a/styles.css
+++ b/styles.css
@@ -237,6 +237,11 @@ z-index: 0;
   font-weight: 500;
   font-style: normal;
 }
+
+
+/* .titulo:hover{
+  filter: brightness(1.6);
+} */
 .tituloDiv {
   display: flex;
   justify-content: center;
@@ -267,8 +272,10 @@ z-index: 0;
   justify-content: space-evenly;
   border-radius: 24px;
   
-  background-color: oklch(96.987% 0.00122 107.796 / 0.90);
-  backdrop-filter: blur(10px);
+  background-color: oklch(96.987% 0.00122 107.796 / 0.75);
+  backdrop-filter: blur(25px);
+  /* border: inset;
+  border: 4px solid rgba(255, 255, 255, 0.355); */
 }
 
 .boton {
