--- a/styles.css
+++ b/styles.css
@@ -227,9 +227,11 @@ z-index: 0;
 border-radius: 12px;
 display: none;
 width: 100%;
-height: 90vh;
+height: 80vh;
 margin-bottom: 24px;
+transition: 200ms;
 }
+
 
 .foto:hover {
   filter: brightness(60%);
@@ -305,7 +307,7 @@ margin-bottom: 24px;
   margin: auto 0 auto 0;
 }
 .iconoContacto {
-  visibility: hidden;
+  
   margin: auto 0 auto 0;
   height: 32px;
   width: 32px;
@@ -802,6 +804,10 @@ footer {
   }
   .iconosMenuContainer{
     top:55px;
+  }
+  .videoclip{
+    margin-bottom: 24px;
+    height: 35vh;
   }
 
   /* PRESENTACION */
