--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,9 @@
   margin: 0;
   
 }
-
+*{
+  -webkit-tap-highlight-color: transparent;
+}
 
 body {
   -webkit-font-smoothing: antialiased;
@@ -330,8 +332,9 @@ transition: 200ms;
 }
 .iconoToggle svg{
   fill: var(--titulo);
-  
+ 
 }
+
 .iconoToggle svg:last-child{
   display: none;
 }
