--- a/styles.css
+++ b/styles.css
@@ -128,10 +128,12 @@ html {
   z-index: -2;
   width: 100%;
   height: 100%;
+   
   object-fit: cover;
   animation: animScroll1 200ms linear 0ms;
-  animation-duration: 200ms;
-  animation-timeline: scroll(block nearest);
+  animation:blur 1000ms ease 900ms forwards;
+  
+  /* animation-timeline: scroll(block nearest); */
 }
 
 .btnContactoContainer {
@@ -157,6 +159,7 @@ z-index: 0;
   border: 3px solid var(--colorBtnHero);
   border-color: var(--colorBtnHero);
   background-color: transparent;
+  
   font-size: 1.5rem;
   cursor: pointer;
   transition: 150ms;
@@ -682,6 +685,13 @@ footer {
     opacity: 1;
   }
 }
+@keyframes blur{
+  from{
+filter: blur(0);
+  }to{
+    filter: blur(4px);
+  }
+}
 @keyframes animMenuInv {
   from {
     left: -37px;
@@ -694,9 +704,11 @@ footer {
 }
 @keyframes animScroll1 {
   from {
+    filter: blur();
   }
   to {
     opacity: 0;
+    filter:blur(8px);
   }
 }
 @keyframes animGaleria {
