--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ html {
 /* HERO */
 .heroContainer {
   display: flex;
-  height: 120dvh;
+  height: 120svh;
   z-index: -2;
 }
 .heroImagen {
@@ -762,7 +762,7 @@ footer {
     gap: 20px;
     justify-content: center;
     align-items: center;
-    /* transform: translate(-50%, -20%); */
+    transform: translate(-50%, -20%);
     width: 100%;
   }
   .btnContacto {
@@ -773,7 +773,7 @@ footer {
     z-index: -1;
 
     width: 100%;
-    /* top: 25%; */
+    top: 25%;
     left: 0;
     transform: translate(0, 0);
   }
